--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 appdirs==1.4.3
+configparser==3.5.0
 Django==1.11
 django-filter==1.0.2
 djangorestframework==3.6.2
@@ -10,5 +11,3 @@ Pillow==4.1.1
 pyparsing==2.2.0
 pytz==2017.2
 six==1.10.0
-numpy==1.9.2
-scipy==0.15.1
