--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ configparser==3.5.0
 Django==1.11
 django-filter==1.0.2
 djangorestframework==3.6.2
+gunicorn==19.7.1
 Markdown==2.6.8
+MySQL-python==1.2.5
 olefile==0.44
 packaging==16.8
 Pillow==4.1.1
